All notable changes to ampycloud will be documented in this file.

The format is inspired from [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [v0.6.0.dev0]
### Added:
 - [fpavogt, 2022-10-18] Add 3 new scientific validation cases.
### Fixed:
### Changed:
 - [fpavogt, 2022-10-18] Enable multiple min_sep_vals for the LAYERING step.
 - [fpavogt, 2022-10-18] Cleanup pylint and error messages.
 - [fpavogt, 2022-10-18] Use min/max+padding to assess if slices are overlapping, instead of mean+std.
 - [fpavogt, 2022-10-18] Default value of OKTA_LIM8 is changed from 98 to 99.
### Deprecated:
### Removed:
### Security:

## [v0.5.0.dev0]
### Fixed:
 - [fpavogt, 2022-07-08] Fix #78 and #79.

## [v0.4.0.dev0]
### Added:
 - [fpavogt, 2022-02-27] Add new speed-check Action.
 - [fpavogt, 2022-02-25] Add the `prms` keyword to set parameters for each run call in a thread-safe manner.
### Fixed:
 - [fpavogt, 2022-03-02] Fix #75.
 - [fpavogt, 2022-02-25] Fix #71 and #25.
### Removed:
 - [fpavogt, 2022-02-25] Remove yaconfigobject dependency in favor of ruamel.yaml.
### Security:

## [v0.3.0.dev0]
### Added:
 - [fpavogt, 2022-01-27] Add tests for the .plots.secondary module.
### Fixed:
 - [fpavogt, 2022-01-27] Fix #66 and #67.
 - [fpavogt, 2022-01-26] Fix #62, #63 and #64.
### Changed:
 - [fpavogt, 2022-02-01] Implement review feedback, including name change for `scaled` to `apply_scaling`.

## [v0.2.1.dev0]
### Fixed:
 - [fpavogt, 2022-01-21] Fix #58.

## [v0.2.0.dev1]
### Fixed:
 - [fpavogt, 2022-01-21] First pypi release.

## [v0.2.0.dev0]
### Added:
 - [fpavogt, 2022-01-21] New CI Actions to automate the pypi releases.
 - [fpavogt, 2022-01-17] Added new utils.utils.temp_seed() function to set random seed temporarily only.
 - [fpavogt, 2022-01-13] New icao module, for easy/clean access to the significant_cloud() function.